--- a/index.html
+++ b/index.html
@@ -6,23 +6,17 @@
 <link href="tools/style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="tools/jquery.min.js"></script> 
 <script type="text/javascript" src="tools/cufon-yui.js"></script>
-<script type="text/javascript" src="tools/Bebas_400.font.js"></script>
-<script type="text/javascript" src="tools/Bell_Gothic_Std_300.font.js"></script>
-<script type="text/javascript">
-	Cufon.replace('a.logo', {fontFamily: 'Bebas'});
-	Cufon.replace('a.logo span', {fontFamily: 'Bell Gothic Std'});
-</script>
 
 </head>
 <body>
 <div class="main_container">
 	<div class="header">
-		<a class="logo" href="#">some name<span>the slogan goes here</span></a>
+		<a class="logo" href="#">FacOShare<span>Vous voulez râler</br>Faîtes vous entendre</span></a>
 	</div>
 	<div class="content">
-		<h1>hello.<span>We’re Coming Very Soon</span></h1>
+		<h1>Hey.<span>Vous avez une idée à partager, un reproche à faire entendre ?<span> Nous sommes là pour que vôtre parole soit entendue !</span></h1>
 		<div class="right_side">
-			<p>// <a href="#">info@somename.com</a><br/>// 506-200-5871</p>
+			<p>//<a href="#">FacOShare.ups@gmail.com</a></p>
 			<ul class="s_icons">
 				<li class="fb"><a href="#"></a></li>
 				<li class="tw"><a href="#"></a></li>
