--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 <body>
 <div class="main_container">
 	<div class="header">
-		<a class="logo" href="#">FacOShare<span>Vous voulez râler</br>Faîtes vous entendre</span></a>
+		<a class="logo" href="#">FacOShare<span>Vous voulez râler<br>Faîtes vous entendre</span></a>
 	</div>
 	<div class="content">
-		<h1>Hey.<span>Vous avez une idée à partager ? </br> un reproche à faire entendre ?</br> Nous sommes là pour vous !</span></h1>
+		<h1>Hey.<span>Vous avez une idée à partager ? <br> un reproche à faire entendre ?<br> Nous sommes là pour vous !</span></h1>
 		<div class="right_side">
 			<p>//<a href="#">FacOShare.ups@gmail.com</a></p>
 			<ul class="s_icons">
