--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 		<a class="logo" href="#">FacOShare<span>Vous voulez râler<br>Faîtes vous entendre</span></a>
 	</div>
 	<div class="content">
-		<h1>Hey.<span>Vous avez une idée à partager ? <br> un reproche à faire entendre ?<br> Nous sommes là pour vous !</span></h1>
+		<h1>Hey.<span>Vous avez une idée à partager ? <br> 
+			Un reproche à faire entendre ?<br> 
+			Nous sommes là pour vous !</span></h1>
 		<div class="right_side">
-			<p>//<a href="#">FacOShare.ups@gmail.com</a></p>
+			<p><a href="#">FacOShare.ups@gmail.com</a></p>
 			<ul class="s_icons">
 				<li class="fb"><a href="#"></a></li>
 				<li class="tw"><a href="#"></a></li>
