--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 			Un reproche à faire entendre ?<br> 
 			Nous sommes là pour vous !</span></h1>
 		<div class="right_side">
-			<p><a href="#">FacOShare.ups@gmail.com</a></p>
+			<p><a href="mailto:FacOShare.ups@gmail.com">FacOShare.ups@gmail.com</a></p>
 			<ul class="s_icons">
 				<li class="fb"><a href="#"></a></li>
 				<li class="tw"><a href="#"></a></li>
