Identify create profile

--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 		</div>
 	</div>
 	<form class="email">
-		<input type="text" class="field" onfocus="if(this.value=='Get Notified (Email Address)') this.value='';" onblur="if(this.value=='' || this.value==' ') this.value='Get Notified (Email Address)';" value="Get Notified (Email Address)" />
-		<input type="button" class="submit" />
+		<input type="text" class="field"
+		       id="mail"
+		       onfocus="if(this.value=='Get Notified (Email Address)') this.value='';"
+		       onblur="if(this.value=='' || this.value==' ') this.value='Get Notified (Email Address)';"
+		       value="Get Notified (Email Address)" />
+		<input type="button" class="submit"
+		       onclick="mixpanel.identify(document.getElementById('mail').innerHTML);" />
 	</form>
 	
 </div>
