--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 		       onblur="if(this.value=='' || this.value==' ') this.value='Get Notified (Email Address)';"
 		       value="Get Notified (Email Address)" />
 		<input type="button" class="submit"
-		       onclick="mixpanel.identify(document.getElementById('mail').innerHTML);" />
+		       onclick="mixpanel.identify(document.getElementById('mail').value);" />
 	</form>
 	
 </div>
