--- a/index.html
+++ b/index.html
@@ -31,14 +31,21 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 	</div>
 	<form class="email">
 		<input type="text" class="field"
-		       id="mail"
+		       id="emailfield"
 		       onfocus="if(this.value=='Get Notified (Email Address)') this.value='';"
 		       onblur="if(this.value=='' || this.value==' ') this.value='Get Notified (Email Address)';"
 		       value="Get Notified (Email Address)" />
-		<input type="button" class="submit"
-		       onclick="mixpanel.identify(document.getElementById('mail').value);" />
+		<input id="emailsubmit" type="button" class="submit" />
 	</form>
 	
 </div>
+<script>
+	var emailfield = document.getElementById("emailfield");
+	var emailsubmit = document.getElementById("emailsubmit");
+	
+	emailsubmit.onclick = function() {
+		mixpanel.people.set("$email": emailfield.value);
+	};
+</script>
 </body>
 </html>
