--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 	var emailsubmit = document.getElementById("emailsubmit");
 	
 	emailsubmit.onclick = function() {
-		mixpanel.people.set("$email": emailfield.value);
+		mixpanel.people.set({"$email": emailfield.value});
 	};
 </script>
 </body>
