--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 for(h=0;h<k.length;h++)e(d,k[h]);a._i.push([b,c,f])};a.__SV=1.2;b=e.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";c=e.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c)}})(document,window.mixpanel||[]);
 mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 </head>
-<body>
+<body onload="onLoad();">
 <div class="main_container">
 	<div class="header">
 		<a class="logo" href="#">FacOShare<span>Vous voulez râler<br>Faîtes vous entendre</span></a>
@@ -40,12 +40,16 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 	
 </div>
 <script>
-	var emailfield = document.getElementById("emailfield");
-	var emailsubmit = document.getElementById("emailsubmit");
+	function onLoad() {
+		var emailfield = document.getElementById("emailfield");
+		var emailsubmit = document.getElementById("emailsubmit");
 	
-	emailsubmit.onclick = function() {
-		mixpanel.people.set({"$email": emailfield.value});
-	};
+		emailsubmit.onclick = function() {
+			mixpanel.identify();
+			mixpanel.people.set({"$email": emailfield.value});
+			alert("Successfully submitted your email: " + emailfield.value);
+		};
+	}
 </script>
 </body>
 </html>
