--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 	<form id="emailform" class="email">
 		<input type="email" required class="field"
 		       id="emailfield"
-		       onfocus="if(this.value=='Get Notified (Email Address)') this.value='';"
-		       onblur="if(this.value=='' || this.value==' ') this.value='Get Notified (Email Address)';"
-		       value="Get Notified (Email Address)" />
+		       placeholder="Get Notified (Email Address)" />
 		<input id="emailbutton" type="button" class="submit" />
 	</form>
 	
