--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 		var emailbutton = document.getElementById("emailbutton");
 		var emailform = document.getElementById("emailform");
 	
-		emailform.onsubmit = emailbutton.onclick = function() {
+		emailbutton.onclick = emailform.onsubmit = function() {
 			mixpanel.identify();
 			mixpanel.people.set({"$email": emailfield.value});
 			alert("Successfully submitted your email: " + emailfield.value);
