--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 		       onfocus="if(this.value=='Get Notified (Email Address)') this.value='';"
 		       onblur="if(this.value=='' || this.value==' ') this.value='Get Notified (Email Address)';"
 		       value="Get Notified (Email Address)" />
-		<input id="emailbutton" type="button" class="submit" />
+		<button id="emailbutton" type="submit" class="submit" />
 	</form>
 	
 </div>
@@ -45,7 +45,7 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 		var emailbutton = document.getElementById("emailbutton");
 		var emailform = document.getElementById("emailform");
 	
-		emailform.onsubmit = emailbutton.onclick = function() {
+		emailform.onsubmit = function() {
 			mixpanel.identify();
 			mixpanel.people.set({"$email": emailfield.value});
 			alert("Successfully submitted your email: " + emailfield.value);
