Failed last commit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 		<input type="email" required class="field"
 		       id="emailfield"
 		       placeholder="Get Notified (Email Address)" />
-		<input id="emailbutton" type="button" class="submit" />
+		<button id="emailbutton" type="submit" class="submit" />
 	</form>
 	
 </div>
