--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 			mixpanel.people.set({"$email": emailfield.value});
 			alert("Successfully submitted your email: " + emailfield.value);
 		};
+		
+		mixpanel.track("Page Load");
 	}
 </script>
 </body>
