--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@ mixpanel.init("5e5ecfad0d31096f44738133a9333b50");</script><!-- end Mixpanel -->
 <body onload="onLoad();">
 <div class="main_container">
 	<div class="header">
-		<a class="logo" href="#">FacOShare<span>Vous voulez râler<br>Faîtes vous entendre</span></a>
+		<a class="logo" href="#"></a>
 	</div>
 	<div class="content">
-		<h1>Hey.<span>Vous avez une idée à partager ? <br> 
+		<h1>Etudiants, vous voulez râler ? <br>
+		Faites vous entendre ! 
+		
+		<span>Vous avez une idée à partager ? <br> 
 			Un reproche à faire entendre ?<br> 
 			Nous sommes là pour vous !</span></h1>
 		<div class="right_side">
